--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -21,8 +23,10 @@
     "@types/node": "^20.17.24",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
   }
