--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.8.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
-    "next": "15.2.3",
+    "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,14 +20,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^20.17.24",
-    "@types/react": "^19.0.11",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
   }
