--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,5 +31,13 @@
     "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "sharp"
+    ],
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
